--- a/src/app/pages/configuracoes/configuracoes.page.scss
+++ b/src/app/pages/configuracoes/configuracoes.page.scss
@@ -12,3 +12,11 @@
     display: inline !important;
    
 }
+
+.label-fixa{
+    margin-left: 15px;
+}
+.label-clicavel{
+    
+    font-weight: 600;
+}
