--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,16 +5,16 @@
         <ion-icon name="person-circle" id="icon-profile"></ion-icon>
       </ion-button>
     </ion-buttons>
-    
+
     <div class="titulos-container">
 
       <ion-title>Olá, {{usuario}}!</ion-title>
 
-      <ion-subtitle>{{data}}</ion-subtitle> 
+      <ion-subtitle>{{data}}</ion-subtitle>
 
     </div>
 
-    
+
 
     <ion-buttons slot="end">
       <div class="container-search">
@@ -22,7 +22,7 @@
         <div class="search"></div>
       </div>
     </ion-buttons>
-    
+
 
   </ion-toolbar>
 </ion-header>
@@ -30,34 +30,35 @@
 <ion-content>
   <ion-grid>
 
+    <ion-row>
+      <ion-col>
+        <p id="titulo-cards-home">Encontre a Unidade de Pronto Atendimento que irá lhe <br> atender mais rápido!</p>
+      </ion-col>
+    </ion-row>
 
     <ion-row>
       <ion-col>
-        <ion-card>
-
+        <ion-card (click)="irHospital()">
           <ion-card-content>
             <ion-list>
               <ion-item>
                 <ion-thumbnail slot="end">
                   <img alt="FilaMed Logo" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
                 </ion-thumbnail>
-                <p>asdas</p>
-                <p>asds</p>
+                <div class="informacoes-div">
+                  <h1>UPA Exemplo - 3,5 km </h1>
+                  <p><i class="bi bi-geo-alt-fill icon-text"></i>&nbsp; Tempo Ida: <span>{{tempo}}</span></p>
+                  <p><i class="bi bi-clock-fill icon-text"></i>&nbsp; Fila Espera: <span>{{tempo}}</span></p>
+                </div>
               </ion-item>
             </ion-list>
-
           </ion-card-content>
-
         </ion-card>
       </ion-col>
 
     </ion-row>
 
-    <ion-row>
-      <ion-col>
 
-      </ion-col>
-    </ion-row>
 
   </ion-grid>
 
@@ -65,4 +66,3 @@
 
 
 </ion-content>
-
