--- a/src/app/pages/subpages/tela-logo/tela-logo.page.html
+++ b/src/app/pages/subpages/tela-logo/tela-logo.page.html
@@ -1,13 +1,5 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>tela-logo</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">tela-logo</ion-title>
-    </ion-toolbar>
-  </ion-header>
+ <div class="div-img">
+   <img src="../../../../assets/icons/filamed-sem-fundo.png" alt="">
+ </div>
 </ion-content>
